# whatsapp-mcp

./: .gitignore  README.md  install-media.py
whatsapp-bridge/: go.mod  go.sum  main.go
whatsapp-mcp-server/: main.py  pyproject.toml  transcribe.py  whatsapp.py
